Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16268

mariabackup : sporadic "Checksum mismatch in datafile: ibdata1, Space ID:0" during backup

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-deb-trusty-x86/builds/6162

      mariabackup.xb_history                   w4 [ fail ]
              Test ended at 2018-05-19 03:42:36
       
      CURRENT_TEST: mariabackup.xb_history
      mysqltest: At line 5: exec of '/usr/bin/mariabackup --defaults-file=/run/shm/var/4/my.cnf --history=foo --backup --target-dir=/run/shm/var/4/tmp/backup 2>&1' failed, error: 256, status: 1, errno: 11
      Output from before failure:
      180519 03:42:36 Connecting to MySQL server host: localhost, user: root, password: set, port: 16020, socket: /run/shm/var/tmp/4/mysqld.1.sock
      Using server version 10.3.7-MariaDB-1:10.3.7+maria~trusty-log
      /usr/bin/mariabackup based on MariaDB server 10.3.7-MariaDB debian-linux-gnu (i686) 
      mariabackup: uses posix_fadvise().
      mariabackup: cd to /run/shm/var/4/mysqld.1/data/
      mariabackup: open files limit requested 1024, set to 1024
      mariabackup: using the following InnoDB configuration:
      mariabackup:   innodb_data_home_dir = 
      mariabackup:   innodb_data_file_path = ibdata1:12M:autoextend
      mariabackup:   innodb_log_group_home_dir = ./
      2018-05-19  3:42:36 0 [Note] InnoDB: Number of pools: 1
      2018-05-19  3:42:36 0 [Note] InnoDB: Log sequence number at the start 1756947 and the end 1761505 do not match
      2018-05-19  3:42:36 0 [ERROR] InnoDB: Checksum mismatch in datafile: ibdata1, Space ID:0, Flags: 0. Please refer to http://dev.mysql.com/doc/refman/5.7/en/innodb-troubleshooting-datadict.html for how to resolve the issue.
      mariabackup: Could not open data files.
      mariabackup: error: xb_load_tablespaces() failed with error Data structure corruption.
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: