MDEV-16268 : sporadic checksum mismatch when opening system tablespace in backup

Attempt to fix by retrying srv_sys_space.open_or_create() if it reports
corruption.